# fast-arm-tbcnn

./: .gitignore  LICENSE  README.md  mnist_tbn_best.pt  tmp
ADR/: 0000-template.md  0001-onnx-runtime-integration.md  0002-quantization-strategy.md  0003-memory-layout.md  0004-threading-model.md  0005-error-handling-strategy.md  0006-conv2d-optimization.md  0007-pooling-operations.md  README.md
GeMM/: CMakeLists.txt  README.md  combined_results.csv  matrix_gen.py
GeMM/01-naive/: CMakeLists.txt  GeMM.cpp  GeMM.hpp  test_naive.cpp
GeMM/02-coded/: CMakeLists.txt  GeMM.cpp  GeMM.hpp  matrices_to_test.hpp  test_coded.cpp
GeMM/03-blocked/: CMakeLists.txt  GeMM.cpp  GeMM.hpp  matrices_64x64.hpp  test_blocked.cpp
GeMM/04-neon/: CMakeLists.txt  GeMM.cpp  GeMM.hpp  matrices_to_test.hpp  test_neon.cpp
GeMM/05-final/: CMakeLists.txt  GeMM.cpp  GeMM.hpp  test_final.cpp
GeMM/bench/: CMakeLists.txt  README.md  combined_results.csv
GeMM/bench/plots/: plot_results.py  requirements.txt
GeMM/bench/plots/figures/: statistics.csv
GeMM/bench/result/: m4pro_01.csv  m4pro_01_large.csv  m4pro_02.csv  m4pro_02_large.csv  m4pro_03.csv  m4pro_03_large.csv  m4pro_04.csv  m4pro_04_large.csv  m4pro_05.csv  m4pro_05_large.csv
GeMM/bench/result/a52/: README.md  a52_01.csv  a52_01_bigcore.csv  a52_02.csv  a52_02_bigcore.csv  a52_03.csv  a52_03_bigcore.csv  a52_04.csv  a52_04_bigcore.csv  a52_05.csv  a52_05_opt.csv
GeMM/bench/result/m4pro/: README.md  m4pro_01.csv  m4pro_02.csv  m4pro_03.csv  m4pro_04.csv  m4pro_05.csv
GeMM/bench/result/rpi/: README.md  rpi_01.csv  rpi_02.csv  rpi_03.csv  rpi_04.csv  rpi_05.csv
GeMM/bench/src/: csv_writer.cpp  csv_writer.hpp  main.cpp  matrix_gen.cpp  matrix_gen.hpp  runner.cpp  runner.hpp
tbn-runtime/: .gitignore  CMakeLists.txt  IMPLEMENTATION_STATUS.md  ONNX_INTEGRATION_STATUS.md  README.md  build.sh  test_onnx_loading.cpp
tbn-runtime/benchmarks/: CMakeLists.txt  benchmark_quantized_gemm.cpp  simple_neon_test.cpp
tbn-runtime/docs/: ONNX_INTEGRATION.md
tbn-runtime/examples/: CMakeLists.txt  README.md  simple_example.cpp  test_onnx_inference.cpp  test_onnx_loading.cpp
tbn-runtime/include/tbn/: tbn.hpp
tbn-runtime/include/tbn/memory/: packed_weights.hpp
tbn-runtime/include/tbn/onnx_integration/: onnx_parser.hpp
tbn-runtime/include/tbn/operators/: conv2d.hpp  gemm.hpp  pooling.hpp  quantized_conv2d.hpp  quantized_gemm.hpp
tbn-runtime/include/tbn/quantization/: quantizer.hpp  strategies.hpp
tbn-runtime/include/tbn/runtime/: attribute.hpp  forward_declarations.hpp  model.hpp  session.hpp  tensor.hpp  types.hpp
tbn-runtime/include/tbn/utils/: errors.hpp  logging.hpp
tbn-runtime/python/: bindings.cpp
tbn-runtime/python/tbn/: __init__.py  quantization.py
tbn-runtime/src/onnx_integration/: CMakeLists.txt  onnx_parser.cpp  onnx_parser_simple.cpp
tbn-runtime/src/operators/: conv2d.cpp  gemm.cpp  pooling.cpp  quantized_conv2d.cpp  quantized_gemm.cpp  quantized_gemm_neon.cpp
tbn-runtime/src/quantization/: quantizer.cpp
tbn-runtime/src/runtime/: model.cpp
tbn-runtime/src/utils/: logging.cpp
tbn-runtime/tests/: CMakeLists.txt  test_basic.cpp  test_conv2d_optimized.cpp  test_onnx.cpp  test_onnx_conv_speed.cpp  test_pooling.cpp  test_quantized_operators.cpp
tbn-runtime/tools/: create_test_onnx.py
tests/benchmark/: cifar10_benchmark.py  direct_gemm_benchmark.py  fair_comparison.py  naive_cifar10.cpp  run_benchmark.py  visualize_results.py
tests/benchmark/results/: benchmark_arm64.json
tests/demo_images/: demo_7.pgm
tests/models/cnn/: create_cnn_model.py
tests/models/cnn/onnx/: simple_cnn.onnx  simple_cnn.onnx.data
tests/models/simple/: generate_models.py  requirements.txt
tests/models/simple/onnx/: binary_weights.onnx  simple_cnn.onnx  simple_cnn.onnx.data  simple_conv.onnx  simple_matmul.onnx  simple_mlp.onnx  ternary_weights.onnx
tests/python/: download_mnist_samples.py  evaluate_mnist.py  mnist_classifier.py  test_python_bindings.py
tests/python/mnist_samples/0/: 0_00.pgm  0_01.pgm  0_02.pgm  0_03.pgm  0_04.pgm  0_05.pgm  0_06.pgm  0_07.pgm  0_08.pgm  0_09.pgm
tests/python/mnist_samples/1/: 1_00.pgm  1_01.pgm  1_02.pgm  1_03.pgm  1_04.pgm  1_05.pgm  1_06.pgm  1_07.pgm  1_08.pgm  1_09.pgm
tests/python/mnist_samples/2/: 2_00.pgm  2_01.pgm  2_02.pgm  2_03.pgm  2_04.pgm  2_05.pgm  2_06.pgm  2_07.pgm  2_08.pgm  2_09.pgm
tests/python/mnist_samples/3/: 3_00.pgm  3_01.pgm  3_02.pgm  3_03.pgm  3_04.pgm  3_05.pgm  3_06.pgm  3_07.pgm  3_08.pgm  3_09.pgm
tests/python/mnist_samples/4/: 4_00.pgm  4_01.pgm  4_02.pgm  4_03.pgm  4_04.pgm  4_05.pgm  4_06.pgm  4_07.pgm  4_08.pgm  4_09.pgm
tests/python/mnist_samples/5/: 5_00.pgm  5_01.pgm  5_02.pgm  5_03.pgm  5_04.pgm  5_05.pgm  5_06.pgm  5_07.pgm  5_08.pgm  5_09.pgm
tests/python/mnist_samples/6/: 6_00.pgm  6_01.pgm  6_02.pgm  6_03.pgm  6_04.pgm  6_05.pgm  6_06.pgm  6_07.pgm  6_08.pgm  6_09.pgm
tests/python/mnist_samples/7/: 7_00.pgm  7_01.pgm  7_02.pgm  7_03.pgm  7_04.pgm  7_05.pgm  7_06.pgm  7_07.pgm  7_08.pgm  7_09.pgm
tests/python/mnist_samples/8/: 8_00.pgm  8_01.pgm  8_02.pgm  8_03.pgm  8_04.pgm  8_05.pgm  8_06.pgm  8_07.pgm  8_08.pgm  8_09.pgm
tests/python/mnist_samples/9/: 9_00.pgm  9_01.pgm  9_02.pgm  9_03.pgm  9_04.pgm  9_05.pgm  9_06.pgm  9_07.pgm  9_08.pgm  9_09.pgm
tests/train/cifar10/: cifar10_binary_weights.onnx  cifar10_tbn.onnx  cifar10_tbn.onnx.data  quantize_to_binary.py  train_tbn_cifar10.py
tests/train/mnist/: mnist_tbn.onnx  mnist_tbn.onnx.data  mnist_tbn_v2.onnx  train_tbn_mnist.py
